k8s/ingress/iot-laundry-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: svc-fanout
spec:
  rules:
  - host: laundry.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: web-react
          servicePort: 5000
      - path: /stats
        backend:
          serviceName: svc-stats
          servicePort: 8890
      - path: /img
        backend:
          serviceName: svc-ingest
          servicePort: 8885
      - path: /predict
        backend:
          serviceName: svc-predict
          servicePort: 5000
      - path: /storePredict
        backend:
          serviceName: svc-track
          servicePort: 8889
      - path: /storeImg
        backend:
          serviceName: svc-store
          servicePort: 8892
